# ebinexpy

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md  methods.md
docs/research/: index.md
docs/validation/: demo-live-validation.md  index.md
examples/: demo_order.py  read_market.py
openspec/changes/define-ebinexpy-core-library/: design.md  proposal.md  tasks.md
src/ebinexpy/: __init__.py  client.py  config.py
src/ebinexpy/accounts/: __init__.py  models.py  service.py  wire.py
src/ebinexpy/auth/: __init__.py  models.py  service.py  store.py  wire.py
src/ebinexpy/core/: __init__.py  exceptions.py  logging.py  money.py  typing.py
src/ebinexpy/events/: __init__.py  dispatcher.py  models.py  streams.py
src/ebinexpy/market/: __init__.py  candles.py  models.py  service.py  wire.py
src/ebinexpy/orders/: __init__.py  models.py  service.py  state.py  validation.py  wire.py
src/ebinexpy/raw/: __init__.py  client.py
src/ebinexpy/transport/: __init__.py  http.py  sockjs.py  stomp.py  supervisor.py  websocket.py
tests/contract/: README.md  test_documentation.py  test_fixture_secrets.py
tests/fixtures/rest/: available_symbols.json  login.json
tests/fixtures/ws/: order_lifecycle.json
tests/integration/demo/: README.md  test_live_demo.py
tests/unit/: test_client.py  test_scaffold.py
tests/unit/accounts/: test_wire.py
tests/unit/auth/: test_store.py
tests/unit/core/: test_core.py
tests/unit/events/: test_events.py
(+10 files in other folders)
