[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ebinexpy"
version = "0.1.1"
description = "Async Python library for the Ebinex traderoom"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ebinexpy contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "websockets>=14,<17",
]

[project.urls]
Homepage = "https://github.com/felipyfgs/ebinexpy"
Documentation = "https://github.com/felipyfgs/ebinexpy/tree/main/docs"
Repository = "https://github.com/felipyfgs/ebinexpy.git"
Issues = "https://github.com/felipyfgs/ebinexpy/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ebinexpy"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
